Fix cut content on mobile

--- a/style.css
+++ b/style.css
@@ -4,10 +4,10 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  width: 95vw;
+  height: 95vh;
   margin: 0;
   position: relative;
   background-color: #fcfcfc;
@@ -93,7 +93,8 @@ body {
 
 .header-img-container {
   margin-top: 6vh;
-  margin-right: 6vh;
+  margin-left: 6vw;
+  margin-right: 6vw;
   display: flex;
   justify-content: center;
   align-items: center;
